# ganymede

./: Cargo.toml  readme.md
geometry/: Cargo.toml
geometry/src/: cube.rs  cube_sphere.rs  lib.rs  uv_sphere.rs  vertex.rs
math/src/: lib.rs  mat2x2.rs  mat3x3.rs  mat4x4.rs  quaternion.rs  transform.rs  vec2.rs  vec3.rs
physics/: Cargo.toml
physics/src/: collider.rs  collision.rs  lib.rs  rigidbody.rs  world.rs
src/: app.rs  buffer.rs  camera.rs  core.rs  drawable.rs  entity.rs  geometry.rs  main.rs  renderer.rs  scene.rs  shader.wgsl  vertex.rs
src/renderer/: core.rs  mod.rs
