[package]
name = "ganymede"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
egui = "0.34.3"
egui-winit = "0.34.3"
log = "0.4.33"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"
math = { path = "./math" }
image = "0.25.10"
#geometry = { path = "./geometry" }
